Fix app jvm args